move body css to prevent bg shift

--- a/src/common.css
+++ b/src/common.css
@@ -3,14 +3,6 @@
 	color: #666666;
 }
 
-body {
-	font-family: Nunito, sans-serif;
-	color: #666666;
-	background-size: cover;
-	background-image: linear-gradient(to bottom, rgba(180, 200, 255, 0.8), rgba(255, 255, 255, 0.9)),
-		url('../static/ben-kitching-QXcVpzt6pq0-unsplash.jpg');
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
